RESOLVED FIXED196152
Placate exception check validation in constructJSWebAssemblyLinkError().
https://bugs.webkit.org/show_bug.cgi?id=196152
Summary Placate exception check validation in constructJSWebAssemblyLinkError().
Mark Lam
Reported 2019-03-22 10:08:40 PDT
Attachments
proposed patch. (2.87 KB, patch)
2019-03-22 10:13 PDT, Mark Lam
msaboff: review+
Radar WebKit Bug Importer
Comment 1 2019-03-22 10:10:43 PDT
Mark Lam
Comment 2 2019-03-22 10:12:00 PDT
Mark Lam
Comment 3 2019-03-22 10:13:54 PDT
Created attachment 365739 [details] proposed patch.
Michael Saboff
Comment 4 2019-03-22 10:17:13 PDT
Comment on attachment 365739 [details] proposed patch. r=me
Mark Lam
Comment 5 2019-03-22 10:22:19 PDT
Thanks for the review. Landed in r243386: <http://trac.webkit.org/r243386>.
Dominik Inführ
Comment 6 2019-03-24 08:41:00 PDT
web-assembly-link-error-exception-check.js is failing on 32-bit systems because of missing WASM support. I've uploaded a patch that moves this test into JSTests/wasm/stress: https://bugs.webkit.org/show_bug.cgi?id=196187
Note You need to log in before you can comment on or make changes to this bug.