Placate exception check validation in constructJSWebAssemblyLinkError(). https://bugs.webkit.org/show_bug.cgi?id=196152 <rdar://problem/49145257>

Reviewed by Michael Saboff.

JSTests:

* stress/web-assembly-link-error-exception-check.js: Added.

Source/JavaScriptCore:

* wasm/js/WebAssemblyLinkErrorConstructor.cpp:
(JSC::constructJSWebAssemblyLinkError):



Canonical link: https://commits.webkit.org/210448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243386 268f45cc-cd09-0410-ab3c-d52691b4dbfc